Project mr_cgdb {
  database_type: "PostgreSQL"
  Note: "Current schema derived from migrations 001, 003, 004, 005, 006."
}

Table papers {
  id bigint [pk, increment]
  arxiv_id text [unique, note: "Unique when non-null (partial unique index in SQL)"]
  doi text [unique, note: "Unique when non-null (partial unique index in SQL)"]
  weak_key text [unique, note: "Unique when non-null (partial unique index in SQL)"]
  url text
  pdf_url text
  title text [not null]
  year int
  first_author text
  abstract text
  source text [not null, note: "e.g. arxiv, rss:feed-<id>, manual"]
  sources jsonb [not null, default: "'[]'::jsonb"]

  embedding float[] [note: "DOUBLE PRECISION[] in SQL"]
  shadow_max_sim float
  shadow_would_pass boolean
  shadow_argmax_seed text

  llm_relevant boolean
  llm_status text [not null, default: "'pending'"]
  llm_raw text
  last_llm_error text

  deep_verify_useful boolean
  deep_verify_reason text
  deep_verify_raw text
  deep_verify_at timestamptz

  human_resolved boolean [not null, default: false]
  human_relevant boolean
  hand_label_main text
  relevant_at timestamptz

  created_at timestamptz [not null, default: "now()"]
}

Table arxiv_cursor {
  id smallint [pk, default: 1, note: "Single-row table (id=1)"]
  last_submission_prefix text
  last_arxiv_id text
}

Table rss_feeds {
  id bigint [pk, increment]
  url text [not null, unique]
  enabled boolean [not null, default: true]
  created_at timestamptz [not null, default: "now()"]
}

Table rss_cursors {
  feed_id text [pk]
  last_ts timestamptz
  last_key text [not null, default: "''"]
}

Table users {
  id bigint [pk, increment]
  username text [not null, unique]
  password_hash text [not null]
  is_admin boolean [not null, default: false]
  created_at timestamptz [not null, default: "now()"]
}

Table sessions {
  id bigint [pk, increment]
  user_id bigint [not null]
  session_token_hash text [not null, unique]
  csrf_token text [not null]
  expires_at timestamptz [not null]
  created_at timestamptz [not null, default: "now()"]
}

Table profiles {
  id bigint [pk, increment]
  user_id bigint [not null]
  slug text [not null]
  name text [not null]
  description text [not null, default: "''"]
  visibility text [not null, note: "CHECK IN ('public','private')"]
  created_at timestamptz [not null, default: "now()"]
  updated_at timestamptz [not null, default: "now()"]
  last_accessed_at timestamptz [not null, default: "now()"]

  Indexes {
    (user_id, slug) [unique]
  }
}

Table profile_configs {
  profile_id bigint [pk]
  positive_keywords text[] [not null, default: "'{}'"]
  negative_title_keywords text[] [not null, default: "'{}'"]
  llm_prompt text [not null, default: "''"]
  created_at timestamptz [not null, default: "now()"]
  updated_at timestamptz [not null, default: "now()"]
}

Table profile_sources {
  id bigint [pk, increment]
  profile_id bigint [not null]
  source_type text [not null, note: "CHECK IN ('rss','arxiv_query')"]
  source_value text [not null]
  enabled boolean [not null, default: true]
  created_at timestamptz [not null, default: "now()"]
}

Table profile_paper_likes {
  profile_id bigint [not null]
  paper_id bigint [not null]
  note text [not null, default: "''"]
  tags text[] [not null, default: "'{}'"]
  liked_at timestamptz [not null, default: "now()"]

  Indexes {
    (profile_id, paper_id) [pk]
  }
}

Table profile_paper_analysis {
  profile_id bigint [not null]
  paper_id bigint [not null]
  keyword_pass boolean [not null, default: false]
  keyword_hits text[] [not null, default: "'{}'"]
  llm_relevant boolean
  llm_raw text
  shadow_would_auto_download boolean [not null, default: false]
  shadow_score float [not null, default: 0]
  updated_at timestamptz [not null, default: "now()"]

  Indexes {
    (profile_id, paper_id) [pk]
  }
}

Table paper_files {
  paper_id bigint [pk]
  source_url text [not null, default: "''"]
  local_path text
  bytes bigint
  status text [not null, default: "'missing'", note: "CHECK IN ('missing','queued','ready','failed')"]
  last_error text
  updated_at timestamptz [not null, default: "now()"]
}

Table jobs {
  id bigint [pk, increment]
  kind text [not null]
  status text [not null, note: "CHECK IN ('pending','running','failed','done')"]
  payload jsonb [not null, default: "'{}'::jsonb"]
  error_reason text
  created_at timestamptz [not null, default: "now()"]
  updated_at timestamptz [not null, default: "now()"]
  finished_at timestamptz
}

Ref: sessions.user_id > users.id [delete: cascade]
Ref: profiles.user_id > users.id [delete: cascade]
Ref: profile_configs.profile_id > profiles.id [delete: cascade]
Ref: profile_sources.profile_id > profiles.id [delete: cascade]
Ref: profile_paper_likes.profile_id > profiles.id [delete: cascade]
Ref: profile_paper_likes.paper_id > papers.id [delete: cascade]
Ref: profile_paper_analysis.profile_id > profiles.id [delete: cascade]
Ref: profile_paper_analysis.paper_id > papers.id [delete: cascade]
Ref: paper_files.paper_id > papers.id [delete: cascade]
